styles.css
html {
    box-sizing: border-box;
    font-family: Inter;
}

*,
*:before,
*:after {
    box-sizing: inherit;
}

select,
input {
    border: 1px solid grey
}

textarea {
    font-family: Inter;
}

.action {
    padding: 5px;
    border-radius: 50%;
    border: none;
    height: 30px;
    width: 30px;
}

.regular-button {
    border: none;
    padding: 5px;
    border-radius: 5px;
    background-color: rgba(100, 100, 100, 0.1);
}

button {
    background-color: rgba(100, 100, 100, 0.1);
}

button:hover {
    filter: brightness(0.3);
}

body.login {
    display: flex;
    height: 100vh;
    align-items: center;
    justify-content: center;
}

body.login main {
    display: flex;
    justify-content: center;
}

body.chat {
    overflow-x: hidden;
}

.login-panel {
    display: flex;
    flex-direction: column;
    width: 70%;
    border: 1px solid black;
    padding: 10px;
    border-radius: 15px;
}

.login-area {
    display: flex;
    justify-content: center;
    flex-direction: column;
}

.login-area input {
    padding: 0.5em;
    width: 100%;
    border-radius: 5px;
    border: 1px solid grey;
}

.ulist {
    padding-top: 10px;
    padding-bottom: 10px;
}

.user-list {
    padding: 0;
    display: inline;
}

.user-list li {
    display: inline;
}

.navbar {
    display: flex;
    width: 100%;
    justify-content: space-between;
}

.posts {
    display: flex;
    flex-direction: column-reverse;
}

.top-level-stuff {
    position: sticky;
    top: 0;
    background-color: white;
    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
    padding: 10px;
    margin: -10px;
    z-index: 999;
}

.post {
    background-color: rgba(100, 100, 100, 0.1);
    border-radius: 10px;
    margin-top: 10px;
    padding: 9px;
    padding-bottom: 0px;
    display: flex;
    gap: 20px
}

.post-header {
    display: flex;
    align-items: center;
    gap: 10px;
    font-size: 15px;
    justify-content: space-between;
}

.avatar {
    border-radius: 50%;
    aspect-ratio: 1;
    image-rendering: optimizeQuality;
}

.post-box-wrapper {
    display: flex;
    align-items: center;
}

.post-box-wrapper button {
    width: 70px;
    height: 40px;
    border-radius: 5px;
    border: none;
}

.post-box {
    width: 100%;
    border-radius: 0px;
    padding: 5px;
    outline: none;
    height: 40px;
    border: none;
    background-color: rgba(100, 100, 100, 0.1);
    resize: none;
}

.edit-status {
    position: relative;
    opacity: 0.5;
}

img.preview,
.markdown-body img {
    width: auto;
    height: auto;
    max-width: 100%;
    max-height: 10rem;
}

video.preview,
audio.preview {
    height: auto;
    max-height: 10rem;
    position: relative;
}

.file-upload {
    display: inline-flex;
    padding: 5px;
    border-radius: 5px;
    gap: 10px;
    background-color: rgba(100, 100, 100, 0.1);
}

.file-upload a,
.file-upload a:hover,
.file-upload a:visited {
    color: inherit
}

.button-row {
    display: flex;
    gap: 10px;
    flex-wrap: wrap;
    justify-content: right;
}

.markdown-body>p {
    gap: 5px;
    align-items: center;
}

.online-circle {
    position: absolute;
    width: 15px;
    height: 15px;
    border-radius: 50%;
    background-color: green;
    margin-top: -15px;
    margin-left: 35px;
    display: none;
}

.settings-header {
    display: flex;
    width: 100%;
    justify-content: space-between;
    height: 30px;
    align-items: center;
}

.settings {
    width: 20rem;
}

.settings p {
    display: flex;
    justify-content: space-between;
}

.edit-button:disabled {
    opacity: 0.5;
}

